Ingress/labs/01/ingress-wear-watch.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
    creationTimestamp: "2022-08-11T20:38:15Z"
    generation: 1
    name: ingress-wear-watch
    namespace: app-space
    resourceVersion: "1452"
    uid: 6f413f5c-888b-4743-a1eb-8b70a4f0fe4c
  spec:
    rules:
    - http:
        paths:
        - backend:
            service:
              name: wear-service
              port:
                number: 8080
          path: /wear
          pathType: Prefix
        - backend:
            service:
              name: video-service
              port:
                number: 8080
          path: /stream
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 10.97.95.0
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
